# esp-smart-car

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
desktop/backend/: .env  AGENTS.md  Cargo.toml  build.rs
desktop/backend/src/: api.rs  lib.rs  main.rs  serial.rs  websocket.rs
desktop/backend/tests/: api_integration.rs
desktop/frontend/: AGENTS.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/frontend/src/: App.vue  env.d.ts  main.ts  style.css
desktop/frontend/src/components/: ControlPanel.vue  SpeedDashboard.vue  StatusBar.vue  VideoPlayer.vue
desktop/frontend/src/composables/: useApi.ts  useBackendHealth.ts  useKeyboard.ts  useStatus.ts  useWebSocket.ts
desktop/frontend/src/config/: auth.ts  constants.ts
docs/: AGENTS.md  hardware.md
firmware/: AGENTS.md
firmware/camera_module/: camera_config.h  camera_module.ino  video_stream.h
firmware/car-controller/: car_controller.ino  motor_control.h  odometer.h  wireless.h
firmware/car_controller/: camera_config.h  car_controller.ino  motor_control.h  odometer.h  pid_control.h  servo_control.h  video_stream.h  wireless.h
firmware/libraries/wireless_protocol/: library.properties
firmware/libraries/wireless_protocol/src/: wifi_credentials.example.h  wireless.h
firmware/receiver-dongle/: receiver_dongle.ino
firmware/receiver_dongle/: build_opt.h  receiver_dongle.ino
