[package]
name = "esp-smart-car-backend"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["智能车项目团队"]
description = "智能车桌面端后端 - 基于 Axum + WebSocket"
build = "build.rs"

[dependencies]
# Web框架
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# WebSocket
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 串口通信
serialport = "4.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"

# 配置
dotenvy = "0.15"

# Base64编码
base64 = "0.22"

[dev-dependencies]
# Web框架（仅测试使用 ServiceExt::oneshot）
tower = { version = "0.5", features = ["full"] }
# 测试工具
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
