[package]
name = "esp-smart-car-backend"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["智能车项目团队"]
description = "智能车桌面端后端 - 基于 Axum + WebSocket"
build = "build.rs"

[dependencies]
# Web框架
axum = { version = "0.8", features = ["ws"] }

# 静态文件嵌入（将前端编译进二进制，支持任意位置运行）
rust-embed = { version = "8.11", features = ["mime-guess"] }
mime_guess = "2.0"

# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
tokio-util = "0.7"

# TLS/HTTPS 支持（可选，按 .env 中的 TLS_CERT/TLS_KEY 启用）
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"

# WebSocket
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 串口通信
serialport = "4.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"

# 恒定时间比较（用于 API Token 校验，避免时序攻击）
subtle = "2"

# 配置
dotenvy = "0.15"

# Base64编码
base64 = "0.22"

# WebP 压缩（可选，需设置 USE_WEBP=true 启用）
zune-jpeg = "0.5"
webp-rust = "0.2"

[dev-dependencies]
# Web框架（仅测试使用 ServiceExt::oneshot）
tower = { version = "0.5", features = ["full"] }
# 测试工具
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
